# nrf_zb_promicro

./: CMakeLists.txt  README.md  prj.conf  uf2conv.py  zigbee-r23.code-workspace
boards/: promicro_nrf52840_my_nrf52840.overlay
boards/others/promicro_nrf52840_my/: promicro_nrf52840-pinctrl.dtsi  promicro_nrf52840_nrf52840_common.dts
include/: zb_range_extender.h  zb_zcl_struct.h  zephyr_drivers.h  zigbee_app_utils.h
pm_static/: pm_static.yml
sdk/: zigbee_app_utils.c
src/: main.c  zb_zcl_struct.c  zephyr_drivers.c
zigbee2mqtt/: nord_pm.js
